--- a/package.json
+++ b/package.json
@@ -44,6 +44,13 @@
       "eslint:recommended"
     ]
   },
+  "keywords": [
+    "sizeof",
+    "loader",
+    "webpack",
+    "image-size",
+    "image"
+  ],
   "dependencies": {
     "file-loader": "^0.11.2",
     "image-size": "^0.6.0",
