--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
     "loader-utils": "^1.1.0",
     "url-loader": "^0.5.9"
   },
+  "peerDependencies": {
+    "webpack": "^2.0.0 || ^3.0.0"
+  },
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-eslint": "^8.0.0",
