--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "url-loader": "^0.6.2"
   },
   "peerDependencies": {
-    "webpack": "^2.0.0 || ^3.0.0"
+    "webpack": "^2.0.0 || ^3.0.0 || ^4.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
